[versioneer]
VCS = git
style = pep440
versionfile_source = src\lumenox_proton01\_version.py
versionfile_build = lumenox_proton01\_version.py
tag_prefix = ''

[metadata]
name = lumenox_proton01
author = mateopereze
author_email = mateo.pereze4@gmail.com
description = Este proyecto se centra en la recolección automatizada de información a través de técnicas de web scraping

[options]
package_dir = 
    = src
packages = find_namespace:
python_requires = >=3.7.0, <3.12.0
include_package_data = True
install_requires = 
    beautifulsoup4 >= 4.13.5
    gspread >= 6.2.1
    numpy >= 2.3.3
    oauth2client >= 4.1.3
    pandas >= 2.3.2
    playwright >= 1.55.0